[package]
name = "bwb"
version = "0.1.0"
authors = ["LukeM <git@mcquade.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.3"
rand = "0.4.2"
rayon = "1.5.0"
itertools = "0.9.0"

[profile.release]
debug = true